@@ -26,6 +26,7 @@ export(merge_motifs)
 export(motif_peaks)
 export(motif_pvalue)
 export(motif_rc)
+export(motif_score)
 export(motif_tree)
 export(ncol)
 export(normalize)
